--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,6 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# java path to export executables
+org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64
